--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -11,7 +11,7 @@
   <header>
     <h1>Aqua Pulse Adventures Site Plan</h1>
     <h2>Jena Hancock</h2>
-    <h2>WDD 130-C8</h2>
+    <h2>WDD 130</h2>
     <!-- In the header above, add the name of your site, your name and class number. For example if you are in section 3 you would put WDD 130-03 -->
   </header>
   <main>
