--- a/wwr/index.html
+++ b/wwr/index.html
@@ -24,7 +24,7 @@
             <img id="hero-img" src="images\hero 2.png" alt="People enjoying white water rafting">
         </div>
         <section id="hero-msg">
-            <h1 class="home-title">Have An Adventure</h1>
+            <h1 class="home-title">Have A  Great Adventure</h1>
             <h4>Make Memories with Aqua Pulse Adventures </h4>
             <div class='button-box'>
                 <a class='book' href="contactus.html">Book Now</a>
