--- a/wwr/index.html
+++ b/wwr/index.html
@@ -4,6 +4,7 @@
 <link rel="stylesheet" href="styles/style.css">   
 </head>
 <body>
+    <div id="content">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -69,7 +70,8 @@
             <a href="https://instagram.com" target="_blank">
                 <img src="images/instagram.png" alt="instagram icon">
             </a>
-        </div>
-    </footer>
+        
+        </footer>
+    </div>
 </body>
 </html>
