--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -145,7 +145,9 @@
 
     <h3>[Page 2]</h3>
 
-    <!-- <img src="#" alt="page 2 wireframe"> -->
+   <img src="images/page 2 wwr wireframe.png" alt="page 2 wireframe" />
+
+
   </main>
 </body>
 
