Wk 8 Page update

--- a/dreamscape/site-plan.html
+++ b/dreamscape/site-plan.html
@@ -36,8 +36,7 @@
       <h2>Branding</h2>
       <h3>Website Logo</h3>
       <!-- Replace this with some sort of logo for your site.  A logo can be as simple as the name of your site in a nice font :) -->
-      <img src="images/dreamscape logo pen.png" alt="Dreamscape Graphic Design Logo">
-      <img src="images/graphic-designer.png" alt="Dreamscape Graphic Design Logo">
+      <img src="images/dreamscape - logo.png" alt="Dreamscape Graphic Design logo">
 
       <hr>
       <h2>
@@ -93,24 +92,24 @@
       </h3>
       <!-- Think about how you want your navigation bar to look. In the site-plan.css file change the colors to your colors to get the look you desire. --> 
       <nav>
-        <a href="#">Home</a>
-        <a href="#">Page2</a>
-        <a href="#">Page3</a>
-      </nav>
+  <a href="#">Home</a>
+  <a href="#">Services</a>
+  <a href="#">Portfolio</a>
+</nav>
       <hr>
       <h2>
         Site Map
       </h2>
       <div class="sitemap">
-        <div class="sm-home">
-          Home
-        </div>
-        <div class="sm-page2">
-          [Page2] <!-- change this -->
-        </div>
-        <div class="sm-page3">
-          [Page3]  <!-- change this -->
-        </div>
+  <div class="sm-home">
+    Home
+  </div>
+  <div class="sm-page2">
+    Services
+  </div>
+  <div class="sm-page3">
+    Portfolio
+  </div>
 
         <div class="top">
           &nbsp;
@@ -129,31 +128,100 @@
       <h2>
         Content
       </h2>
-      <h3>Home page</h3>
-      <p>
-        [Written copy for the home page here]
-      </p>
-      <p>Images for the Home page</p>
-        <img src="#" alt="image for homepage">
-        <img src="#" alt="image for homepage">
+      <h3>Home Page</h3>
 
-      </ul>
-      <h3>[Page 2]</h3>
-      <p>
-        [Written copy for the Page 2 here]
-      </p>
-      <p>Images for the Page 2</p>
-        <img src="#" alt="image for page">
-        <img src="#" alt="image for page">
+<p><strong>Welcome to Dreamscape Graphic Design</strong></p>
+<p>
+Dreamscape Graphic Design is a creative studio built around the idea that imagination can become reality through thoughtful design. 
+My goal is to help businesses and individuals communicate their ideas in ways that feel authentic, clear, and visually inspiring. 
+Whether it’s branding a local business or crafting marketing materials for a community organization, I approach every project with 
+attention to detail and a sense of creativity that reflects the personality behind the brand.
+</p>
 
-      </ul>
-      <h3>[Page 3]</h3>
-      <p>
-        [Written copy for the Page 3 here]
-      </p>
-      <p>Images for the Page 3</p>
-        <img src="#" alt="image for page3">
-        <img src="#" alt="image for page3">
+<p><strong>Why People Will Visit</strong></p>
+<p>
+People will come to my site to explore creative design options and to see examples of what I can create for them. 
+They may be small business owners, schools, or organizations looking for professional design work that’s still affordable and personal. 
+My site will answer questions like, <em>What kind of design work do you do? How can I hire you? What will the finished product look like?</em> 
+Visitors will leave with a clear idea of my style, my process, and how to contact me for new projects.
+</p>
+
+<p><strong>What Sets Dreamscape Apart</strong></p>
+<p>
+There are many designers out there, but Dreamscape stands out through a balance of creativity, professionalism, and personalization. 
+I take time to understand each client’s personality and tailor each design to their message. 
+My goal is not just to make something that looks good, but to make something that <em>feels right</em> for the brand. 
+The experience should be friendly, collaborative, and inspiring from start to finish.
+</p>
+
+<p>Images for the Home page</p>
+<img src="images/dreamscape - logo.png" alt="Dreamscape Graphic Design logo">
+<img src="images/workspace-creative2.jpg" alt="Graphic designer workspace and tools">
+
+<hr>
+
+<!-- ------------- SERVICES PAGE ------------- -->
+<h3>Services Page</h3>
+
+<p><strong>Design Services</strong></p>
+<p>
+Dreamscape offers a variety of design services that can be customized to fit each client’s needs. 
+This includes logo creation, branding packages, social media graphics, business cards, flyers, newsletters, and promotional materials. 
+My background working with health trusts, schools, and small businesses allows me to create materials that are not only attractive 
+but also strategically designed for communication and engagement. 
+I want my clients to feel confident knowing their brand visuals represent who they are.
+</p>
+
+<p><strong>My Design Process</strong></p>
+<p>
+The process begins with understanding my client’s goals and the audience they want to reach. 
+From there, I sketch, experiment, and refine ideas until the design feels just right. 
+I believe design is about more than aesthetics — it’s about solving problems, creating emotion, and helping people connect with an idea or message. 
+Through collaboration, I ensure my clients feel involved and excited about the final outcome.
+</p>
+
+<p><strong>Contact and Collaboration</strong></p>
+<p>
+Visitors to my site will have the option to reach out through a contact form to discuss potential projects, request quotes, or ask about design ideas. 
+I want communication to feel easy and welcoming. Whether a client needs a full rebrand or just a quick flyer update, 
+Dreamscape is ready to help make their vision a reality.
+</p>
+
+<p>Images for the Services page</p>
+<img src="images/branding-package-mockup3.jpg" alt="Branding package design mockup">
+<img src="images/branding-package-mockup2.jpg" alt="Business cards">
+
+<hr>
+
+<!-- ------------- PORTFOLIO PAGE ------------- -->
+<h3>Portfolio Page</h3>
+
+<p><strong>Portfolio Highlights</strong></p>
+<p>
+The portfolio page will feature examples of my past and current work — from professional flyers and newsletters to digital graphics and brand mockups. 
+This section allows visitors to visualize what’s possible for their own brand. 
+Even if a visitor doesn’t have a design background, the images will show them the range of styles I can create — 
+from sleek and modern to colorful and playful.
+</p>
+
+<p><strong>Inspiration and Style</strong></p>
+<p>
+Each project displayed in my portfolio reflects the creative energy behind Dreamscape. 
+I combine structure and imagination to create work that feels both timeless and original. 
+Colors, typography, and layout choices are made carefully to fit each project’s goals. 
+This page will evolve as I continue to add new pieces that reflect my growth as a designer.
+</p>
+
+<p><strong>Why Design Matters</strong></p>
+<p>
+Design is how people experience your brand — it’s the first impression, the feeling they get, and the memory that sticks. 
+Through Dreamscape, I want to show how thoughtful design can help businesses and individuals communicate more effectively 
+and create a lasting connection with their audience.
+</p>
+
+<p>Images for the Portfolio page</p>
+<img src="images/portfolio-grid.jpg" alt="Grid of design examples">
+<img src="images/portfolio-grid2.jpg" alt="Brand color palette and logo board">
 
       </ul>
       <hr>
