--- a/dreamscape/site-plan.html
+++ b/dreamscape/site-plan.html
@@ -220,7 +220,7 @@ and create a lasting connection with their audience.
 </p>
 
 <p>Images for the Portfolio page</p>
-<img src="images/portfolio-grid.jpg" alt="Grid of design examples">
+<img src="images/portfolio-grid.jpg" alt="Design examples">
 <img src="images/portfolio-grid2.jpg" alt="Brand color palette and logo board">
 
       </ul>
