--- a/wwr/faq.html
+++ b/wwr/faq.html
@@ -21,7 +21,7 @@
     </header>
 
     <main class="faq-page">
-      <h1>Frequently Asked Questions</h1>
+      <h1>Frequently Asked Questions!/h1>
 
       <details>
         <summary>Do I need previous rafting experience?</summary>
