--- a/wwr/faq.html
+++ b/wwr/faq.html
@@ -19,7 +19,15 @@
         <a href="contactus.html">Contact Us</a>
       </nav>
     </header>
-
+        <div id="faq-hero">
+        <div id="faq-hero-box">
+        <img id="faq-hero-img" src="images/faq-hero.png" alt="Rafting group paddling through whitewater rapids">
+        </div>
+        <section id="faq-hero-msg">
+        <h1>Answers to Your Questions</h1>
+        <h4>Everything you need to know before your adventure</h4>
+  </section>
+</div>
     <main class="faq-page">
       <h1>Frequently Asked Questions!/h1>
 
