added links to pages

--- a/wwr/faq.html
+++ b/wwr/faq.html
@@ -14,10 +14,10 @@
       </a>
       <nav>
         <a href="index.html">Home</a>
-        <a href="#">FAQ</a>
+        <a href="faq.html">FAQ</a>
         <a href="site-plan-rafting.html">Site Plan</a>
         <a href="contactus.html">Contact Us</a>
-      </nav>
+    </nav>
     </header>
         <div id="faq-hero">
         <div id="faq-hero-box">
@@ -29,39 +29,40 @@
   </section>
 </div>
     <main class="faq-page">
-      <h1>Frequently Asked Questions!/h1>
+  <h1>Frequently Asked Questions</h1>
 
-      <details>
-        <summary>Do I need previous rafting experience?</summary>
-        <p>No. Most of our trips are beginner-friendly and guided by experienced river guides. We go over safety, paddling, and what to expect before we get on the water.</p>
-      </details>
+  <div class="faq-list">
+    <details>
+      <summary>Do I need previous rafting experience?</summary>
+      <p>No. Most of our trips are beginner-friendly and guided by experienced river guides. We go over safety, paddling, and what to expect before we get on the water.</p>
+    </details>
 
-      <details>
-        <summary>What should I wear on the river?</summary>
-        <p>Wear quick-dry clothing (no cotton if possible), secure sandals or water shoes, and bring dry clothes for after the trip. We provide helmets and life jackets.</p>
-      </details>
+    <details>
+      <summary>What should I wear on the river?</summary>
+      <p>Wear quick-dry clothing (no cotton if possible), secure sandals or water shoes, and bring dry clothes for after the trip. We provide helmets and life jackets.</p>
+    </details>
 
-      <details>
-        <summary>Is this a good trip for kids? What are the age ranges you allow?</summary>
-        <p>Absolutely this is a good trip for children of all ages. We have found however that children over the age of 8 seem to enjoy it more overall (And parents especially enjoy it more if their children are all over 8). A common concern we get from parents is that their children will be bored stuck on a boat for hours at a time. Surprisingly we deal with very few bored children of any age. The areas we are rafting through are some of the most beautiful in the world, and you never know what you might see around any corner. Not to mention the rapids which keep things very interesting. Each boat also comes equipped with a guide. It has been proven that river guides are unable to go for very long at all without telling stories...some of which are even true!
-      </p>
-        </details>
+    <details>
+      <summary>Is there an age or weight limit?</summary>
+      <p>Most family trips allow kids 8+ but it can vary depending on river conditions. Contact us for specifics before booking.</p>
+    </details>
 
-      <details>
-        <summary>What’s included in the price?</summary>
-        <p>Your guided trip, rafting gear (PFD/life jacket, helmet, paddles), and safety instruction are all included. Some trips also include snacks or lunch, depending on the package.</p>
-      </details>
+    <details>
+      <summary>What’s included in the price?</summary>
+      <p>Your guided trip, rafting gear (PFD/life jacket, helmet, paddles), and safety instruction are all included. Some trips also include snacks or lunch, depending on the package.</p>
+    </details>
 
-      <details>
-        <summary>What if the weather is bad?</summary>
-        <p>We run trips in light rain — you’re getting wet anyway! In unsafe conditions (lightning, flooding, etc.), we’ll reschedule or issue a credit.</p>
-      </details>
+    <details>
+      <summary>What if the weather is bad?</summary>
+      <p>We run trips in light rain — you’re getting wet anyway! In unsafe conditions (lightning, flooding, etc.), we’ll reschedule or issue a credit.</p>
+    </details>
 
-      <details>
-        <summary>How do I book a trip?</summary>
-        <p>You can book through our <a href="contactus.html">Contact Us</a> page or call us directly. We’ll confirm your date, group size, and trip details.</p>
-      </details>
-    </main>
+    <details>
+      <summary>How do I book a trip?</summary>
+      <p>You can book through our <a href="contactus.html">Contact Us</a> page or call us directly. We’ll confirm your date, group size, and trip details.</p>
+    </details>
+  </div>
+</main>
 
     <footer>
       <p>Aqua Pulse Adventures &copy; 2025 - Jena Hancock</p>
