--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -6,7 +6,12 @@
   <title>Site Plans</title>
   <link type="text/css" rel="stylesheet" href="styles/site-plan-rafting.css" />
 </head>
-
+<nav>
+  <a href="index.html">Home</a>
+  <a href="faq.html">FAQ</a>
+  <a href="site-plan-rafting.html">Site Plan</a>
+  <a href="contactus.html">Contact Us</a>
+</nav>
 <body>
   <header>
     <h1>Aqua Pulse Adventures Site Plan</h1>
