--- a/wwr/index.html
+++ b/wwr/index.html
@@ -14,11 +14,11 @@
             <img class="logo" src="images/aqua pulse logo.jpg" alt="Pulse Adventures Logo">
         </a>
         <nav>
-            <a href="index.html">Home</a>
-            <a href="#">FAQ</a>
-            <a href="site-plan-rafting.html">Site Plan</a>
-            <a href="contactus.html">Contact Us</a>
-        </nav>
+  <a href="index.html">Home</a>
+  <a href="faq.html">FAQ</a>
+  <a href="site-plan-rafting.html">Site Plan</a>
+  <a href="contactus.html">Contact Us</a>
+</nav>
     </header>
     <div id="hero">
         <div id="hero-box">
