--- a/wwr/faq.html
+++ b/wwr/faq.html
@@ -34,7 +34,7 @@
   <div class="faq-list">
     <details>
       <summary>Do I need previous rafting experience?</summary>
-      <p>No. Most of our trips are beginner-friendly and guided by experienced river guides. We go over safety, paddling, and what to expect before we get on the water.</p>
+      <p>Not at all!  Most of our trips are beginner-friendly and guided by experienced river guides. We go over safety, paddling, and what to expect before we get on the water.</p>
     </details>
 
     <details>
