wireframe addition to site plan

--- a/dreamscape/site-plan.html
+++ b/dreamscape/site-plan.html
@@ -225,29 +225,23 @@ and create a lasting connection with their audience.
 
       </ul>
       <hr>
-      <h2>
-        Wireframes
-      </h2>
-      <p>
-        Create three wireframes for your site. One for each page and list them here</p>
+      <h2>Wireframes</h2>
 
-      <h3>Home</h3>
-      <p>         
-        [Any additional details about home that the wireframe does not make clear]
-      </p>
-      <img src="#" alt="home page wireframe">
+<h3>Home</h3>
+<p>This page introduces my design business and highlights key services with a simple, clean hero section and visuals.</p>
+<img src="images/home-wireframe.png" alt="Home page wireframe">
 
-      <h3>[Page 2]</h3>
-      <p>         
-        [Any additional details about page 2 that the wireframe does not make clear]
-      </p>
-      <img src="#" alt="page 2 wireframe">
+<h3>Services</h3>
+<p>This page outlines the design services I offer with clear sections and example visuals for each category.</p>
+<img src="images/portfolio-wireframe.png" alt="Portfolio page wireframe">
 
-      <h3>[Page 3]</h3>
-      <p>         
-        [Any additional details about page 3 that the wireframe does not make clear]
-      </p>
-      <img src="#" alt="page 3 wireframe">
+<h3>Portfolio</h3>
+<p>This page showcases a gallery of my completed projects and includes links for viewers to learn more or contact me.</p>
+<img src="images/portfolio-wireframe.png" alt="Portfolio page wireframe">
+
+<h3>Contact Us</h3>
+<p>This page is to give clients a page to contact me.</p>
+<img src="images/contactus-wireframe.png" alt="Contact Us page wireframe">
     </main>
   </body>
 
