--- a/wwr/contactus.html
+++ b/wwr/contactus.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Aqua Pulse Adventures | FAQ</title>
+  <title>Aqua Pulse Adventures | Contact Us</title>
   <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
@@ -18,6 +18,8 @@
         <a href="site-plan-rafting.html">Site Plan</a>
         <a href="contactus.html">Contact Us</a>
     </nav>
+
+
     <footer>
       <p>Aqua Pulse Adventures &copy; 2025 - Jena Hancock</p>
       <p><a href="site-plan-rafting.html">Site Plan</a></p>
