Fixed contact us descript

--- a/dreamscape/site-plan.html
+++ b/dreamscape/site-plan.html
@@ -240,7 +240,7 @@ and create a lasting connection with their audience.
 <img src="images/portfolio-wireframe.png" alt="Portfolio page wireframe">
 
 <h3>Contact Us</h3>
-<p>This page is to give clients a page to contact me.</p>
+<p>This page provides an easy way for clients to connect with me for design inquiries, project collaborations, or custom quotes. I welcome questions, ideas, and opportunities to bring your creative vision to life.</p>
 <img src="images/contactus-wireframe.png" alt="Contact Us page wireframe">
     </main>
   </body>
