Wk 10 - Personal Site HTML

--- a/dreamscape/contact.html
+++ b/dreamscape/contact.html
@@ -27,8 +27,7 @@
       </p>
     </section>
 
-    <!-- Contact form page you wanted -->
-    <section class="contact-form">
+        <section class="contact-form">
       <form action="#" method="post">
         <div>
           <label for="name">Name:</label>
@@ -55,9 +54,8 @@
         </div>
       </form>
 
-      <!-- Image that relates to the page -->
-      <figure>
-        <img src="images/workspace-creative-3.jpeg" alt="Designer working at a computer desk">
+            <figure>
+        <img src="images/workspace-creative-3.jpg" alt="Designer working at a computer desk">
 
         <figcaption>Let’s collaborate on your next design project.</figcaption>
       </figure>
