--- a/dreamscape/index.html
+++ b/dreamscape/index.html
@@ -19,7 +19,7 @@
   </header>
 
   <main>
-    <!-- Hero section from your wireframe -->
+    
     <section class="hero">
       <h2>Bringing Ideas to Life Through Design</h2>
       <p>
@@ -29,10 +29,9 @@
       </p>
       <a href="portfolio.html">View My Work</a>
 
-      <!-- Hero image placeholder -->
-      <figure>
-        <img src="images/hero-placeholder.jpg" alt="Collage of graphic design work">
-        <figcaption>Sample design work from Dreamscape Graphic Design.</figcaption>
+            <figure>
+        <img src="images/graphic design hero image.jpg" alt="Collage of graphic design work">
+        <figcaption>Beginning the design work from Dreamscape Graphic Design.</figcaption>
       </figure>
     </section>
 
@@ -58,8 +57,7 @@
   </p>
 </section>
 
-    <!-- Three service highlight cards -->
-    <section class="service-highlights">
+        <section class="service-highlights">
       <article>
         <h3>Branding &amp; Identity</h3>
         <p>
@@ -88,8 +86,7 @@
 
   <footer>
     <p>&copy; 2025 Dreamscape Graphic Design | Crafted by Jena</p>
-    <!-- Link to your site plan (required in assignment) -->
-    <p><a href="site-plan.html">View Site Plan</a></p>
+        <p><a href="site-plan.html">View Site Plan</a></p>
   </footer>
 </body>
 </html>
