--- a/dreamscape/portfolio.html
+++ b/dreamscape/portfolio.html
@@ -28,8 +28,7 @@
       </p>
     </section>
 
-    <!-- Three large portfolio tiles like in your wireframe -->
-    <section class="portfolio-grid">
+        <section class="portfolio-grid">
 
     <section class="portfolio-more">
   <h3>Inspiration and Style</h3>
@@ -55,7 +54,7 @@
       <article>
         <h3>Flyer Design</h3>
         <figure>
-          <img src="images/flyer-placeholder.jpg" alt="Sample promotional flyer design">
+          <img src="images/cooking school flyer.jpg" alt="Flyer design sample">
         </figure>
         <p>
           Promotional flyers created for wellness screenings, community events,
@@ -66,7 +65,7 @@
       <article>
         <h3>Newsletter Layout</h3>
         <figure>
-          <img src="images/newsletter-placeholder.jpg" alt="Newsletter layout sample">
+          <img src="images/monthly newsletter.jpeg" alt="Newsletter layout sample">
         </figure>
         <p>
           Multi-page newsletters designed for a public health insurance trust,
@@ -77,7 +76,7 @@
       <article>
         <h3>Branding Project</h3>
         <figure>
-          <img src="images/branding-project-placeholder.jpg" alt="Branding board with logo and colors">
+          <img src="images/brand guidelines2.jpg" alt="Branding board with logo and colors">
         </figure>
         <p>
           Complete branding packages including logos, color palettes, and
