Services page updated

--- a/dreamscape/services.html
+++ b/dreamscape/services.html
@@ -37,7 +37,7 @@
           <li>Stationery and business card design</li>
         </ul>
         <figure>
-          <img src="images/branding-placeholder.jpg" alt="Branding mockup on stationery">
+          <img src="images/corporate branding idea sm.jpg" alt="Branding mockup on stationery">
         </figure>
       </article>
 
@@ -50,7 +50,7 @@
           <li>Event posters and banners</li>
         </ul>
         <figure>
-          <img src="images/marketing-placeholder.jpg" alt="Marketing flyers and social graphics">
+          <img src="images/Health flyer.jpeg" alt="Marketing flyers and social graphics">
         </figure>
       </article>
 
@@ -63,7 +63,7 @@
           <li>Annual reports and publications</li>
         </ul>
         <figure>
-          <img src="images/print-digital-placeholder.jpg" alt="Printed reports and digital screens">
+          <img src="images/corporate brochure sm.jpg" alt="Printed reports and digital screens">
         </figure>
       </article>
     </section>
