Portfolio corrections & flip card

--- a/dreamscape/portfolio.html
+++ b/dreamscape/portfolio.html
@@ -19,72 +19,92 @@
   </header>
 
   <main>
-    <section class="portfolio-intro">
-      <h2>Portfolio Highlights</h2>
+  <!-- Intro -->
+  <section class="portfolio-intro">
+    <h2>Portfolio Highlights</h2>
+    <p>
+      A selection of projects that represent my style and approach to design.
+      Each piece focuses on clear communication, strong hierarchy, and
+      user-friendly layouts.
+    </p>
+  </section>
+
+  <!-- Grid area -->
+  <section class="portfolio-grid">
+
+    <!-- LEFT: tall text card -->
+    <section class="portfolio-more">
+      <h3>Inspiration and Style</h3>
       <p>
-        A selection of projects that represent my style and approach to design.
-        Each piece focuses on clear communication, strong hierarchy, and
-        user-friendly layouts.
+        Each project in my portfolio reflects a blend of structure and imagination.
+        I’m inspired by clean layouts, thoughtful typography, and color palettes
+        that support the message instead of distracting from it. Some designs are
+        bold and bright, while others are more minimal and calm, but they all share
+        the same goal: to make information easy to understand and visually engaging
+        for the people who see it.
+      </p>
+
+      <h3>Why Design Matters</h3>
+      <p>
+        Design is often the first impression someone has of a brand or message. It
+        shapes how people feel, what they remember, and whether they trust what
+        they see. Thoughtful design can help a small business look polished and
+        professional, make complex information easier to absorb, and create a sense
+        of connection with an audience. Through Dreamscape, I want to show how good
+        design can support real-world goals—not just look pretty on the page.
       </p>
     </section>
 
-        <section class="portfolio-grid">
+    <!-- TOP RIGHT: Flyer Design (FLIP CARD) -->
+    <article class="portfolio-card">
+      <div class="flip-card">
+        <div class="flip-card-inner">
+          <div class="flip-card-front">
+            <figure>
+              <img src="images/cooking school flyer.jpg" alt="Flyer design sample">
+            </figure>
+            <h3>Flyer Design</h3>
+          </div>
+          <div class="flip-card-back">
+            <h3>Flyer Design</h3>
+            <p>
+              Promotional flyers created for wellness screenings, community events,
+              and local campaigns. Flip to see more details and how the layouts
+              guide the reader’s eye.
+            </p>
+          </div>
+        </div>
+      </div>
+    </article>
 
-    <section class="portfolio-more">
-  <h3>Inspiration and Style</h3>
-  <p>
-    Each project in my portfolio reflects a blend of structure and imagination.
-    I’m inspired by clean layouts, thoughtful typography, and color palettes
-    that support the message instead of distracting from it. Some designs are
-    bold and bright, while others are more minimal and calm, but they all share
-    the same goal: to make information easy to understand and visually engaging
-    for the people who see it.
-  </p>
+    <!-- TOP FAR RIGHT: Newsletter Layout -->
+    <article class="portfolio-card">
+      <h3>Newsletter Layout</h3>
+      <figure>
+        <img src="images/monthly newsletter.jpeg" alt="Newsletter layout sample">
+      </figure>
+      <p>
+        Multi-page newsletters designed for a public health insurance trust,
+        featuring clear sections, consistent styles, and visual rhythm that
+        makes longer content easier to read.
+      </p>
+    </article>
 
-  <h3>Why Design Matters</h3>
-  <p>
-    Design is often the first impression someone has of a brand or message. It
-    shapes how people feel, what they remember, and whether they trust what
-    they see. Thoughtful design can help a small business look polished and
-    professional, make complex information easier to absorb, and create a sense
-    of connection with an audience. Through Dreamscape, I want to show how good
-    design can support real-world goals—not just look pretty on the page.
-  </p>
-</section>
-      <article>
-        <h3>Flyer Design</h3>
-        <figure>
-          <img src="images/cooking school flyer.jpg" alt="Flyer design sample">
-        </figure>
-        <p>
-          Promotional flyers created for wellness screenings, community events,
-          and local campaigns.
-        </p>
-      </article>
+    <!-- BOTTOM: Branding Project spanning two columns -->
+    <article class="portfolio-card">
+      <h3>Branding Project</h3>
+      <figure>
+        <img src="images/brand guidelines2.jpg" alt="Branding board with logo and colors">
+      </figure>
+      <p>
+        Complete branding packages including logos, color palettes, and
+        typography for small businesses and school programs, designed to stay
+        flexible across print and digital channels.
+      </p>
+    </article>
 
-      <article>
-        <h3>Newsletter Layout</h3>
-        <figure>
-          <img src="images/monthly newsletter.jpeg" alt="Newsletter layout sample">
-        </figure>
-        <p>
-          Multi-page newsletters designed for a public health insurance trust,
-          featuring clear sections and visual rhythm.
-        </p>
-      </article>
-
-      <article>
-        <h3>Branding Project</h3>
-        <figure>
-          <img src="images/brand guidelines2.jpg" alt="Branding board with logo and colors">
-        </figure>
-        <p>
-          Complete branding packages including logos, color palettes, and
-          typography for small businesses and school programs.
-        </p>
-      </article>
-    </section>
-  </main>
+  </section>
+</main>
 
   <footer>
     <p>&copy; 2025 Dreamscape Graphic Design | Crafted by Jena</p>
