--- a/dreamscape/services.html
+++ b/dreamscape/services.html
@@ -50,7 +50,7 @@
           <li>Event posters and banners</li>
         </ul>
         <figure>
-          <img src="images/health flyer sm.jpg" alt="Marketing flyers and social graphics">
+          <img src="images/monthly newsletter sm.jpg" alt="Marketing flyers and social graphics">
         </figure>
       </article>
 
