--- a/dreamscape/portfolio.html
+++ b/dreamscape/portfolio.html
@@ -57,20 +57,19 @@
 
     <!-- TOP RIGHT: Flyer Design (FLIP CARD) -->
     <article class="portfolio-card">
+      <h3>Flyer Design</h3>
+
       <div class="flip-card">
         <div class="flip-card-inner">
           <div class="flip-card-front">
-            <figure>
-              <img src="images/cooking school flyer.jpg" alt="Flyer design sample">
-            </figure>
-            <h3>Flyer Design</h3>
+            <img src="images/cooking school flyer.jpg" alt="Flyer design sample">
           </div>
           <div class="flip-card-back">
             <h3>Flyer Design</h3>
             <p>
-              Promotional flyers created for wellness screenings, community events,
-              and local campaigns. Flip to see more details and how the layouts
-              guide the reader’s eye.
+              Promotional flyers created for wellness screenings, community
+              events, and local campaigns. Flip to see more details and how the
+              layouts guide the reader’s eye.
             </p>
           </div>
         </div>
