--- a/dreamscape/portfolio.html
+++ b/dreamscape/portfolio.html
@@ -55,26 +55,24 @@
       </p>
     </section>
 
-    <!-- TOP RIGHT: Flyer Design (FLIP CARD) -->
     <article class="portfolio-card">
-      <h3>Flyer Design</h3>
+  <h3>Flyer Design</h3>
 
-      <div class="flip-card">
-        <div class="flip-card-inner">
-          <div class="flip-card-front">
-            <img src="images/cooking school flyer.jpg" alt="Flyer design sample">
-          </div>
-          <div class="flip-card-back">
-            <h3>Flyer Design</h3>
-            <p>
-              Promotional flyers created for wellness screenings, community
-              events, and local campaigns. Flip to see more details and how the
-              layouts guide the reader’s eye.
-            </p>
-          </div>
-        </div>
+  <div class="flip-card">
+    <div class="flip-card-inner">
+      <div class="flip-card-front">
+        <img src="images/cooking school flyer.jpg" alt="Flyer design sample">
       </div>
-    </article>
+      <div class="flip-card-back">
+        <h3>Flyer Design</h3>
+        <p>
+          Promotional flyers created for wellness screenings, community events,
+          and local campaigns. Flip to see more details and how the layouts guide the reader’s eye.
+        </p>
+      </div>
+    </div>
+  </div>
+</article>
 
     <!-- TOP FAR RIGHT: Newsletter Layout -->
     <article class="portfolio-card">
